<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".staffActivity">

    <Button
        android:id="@+id/CAB"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/cab"
        android:layout_marginTop="150dp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/COGAS"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/cogas"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/DGSR"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/dgsr"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/DAF"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/daf"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/DPSE"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/dpse"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/DRH"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/drh"
        android:layout_gravity="center"/>
</LinearLayout>