<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_sky"
    tools:context=".acceuilActivity">

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:rowCount="2"
        app:columnCount="2"
        android:layout_margin="2dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/staff"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:visibility="visible"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="0"
            app:layout_rowWeight="1">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="0dp">

                <ImageView
                    android:id="@+id/ivstaff"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/staff" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ivstaff"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:text="@string/staff"
                    android:textColor="@color/teal_700"
                    android:visibility="visible" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/direction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:visibility="visible"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            tools:visibility="visible">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="0dp">

                <ImageView
                    android:id="@+id/ivdirection"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/direction" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ivdirection"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:text="@string/direction" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/territorial"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1"
            android:layout_margin="5dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="0dp">

                <ImageView
                    android:id="@+id/ivterritorial"
                    android:layout_width="50dp"
                    android:layout_centerInParent="true"
                    android:layout_height="50dp"
                    android:src="@drawable/territorial"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_height="wrap_content"
                    android:text="@string/territorial"
                    android:layout_marginTop="5dp"
                    android:layout_below="@+id/ivterritorial"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/mobile"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1"
            android:layout_margin="5dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="0dp">

                <ImageView
                    android:id="@+id/ivmobile"
                    android:layout_width="50dp"
                    android:layout_centerInParent="true"
                    android:layout_height="50dp"
                    android:src="@drawable/mobile1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_height="wrap_content"
                    android:text="@string/mobile"
                    android:layout_marginTop="5dp"
                    android:layout_below="@+id/ivmobile"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </androidx.gridlayout.widget.GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>